# tic-tac-toe

./: .gitignore  CMakeLists.txt  README.md
headers/: Board.h  Game.h
sources/: Board.cpp  Game.cpp  main.cpp
